--- a/.github/workflows/publish-client.yaml
+++ b/.github/workflows/publish-client.yaml
@@ -10,9 +10,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate .npmrc
-        run: |
-            echo "//npm.pkg.github.com/:_authToken=${{secrets.AUTOMATED_CLIENT_TOKEN}}" > .npmrc
+        run: echo "//npm.pkg.github.com/:_authToken=${{secrets.AUTOMATED_CLIENT_TOKEN}}" > .npmrc
+
+      - name: Install dependencies
+        run: npm install
 
       - name: Publish client
-        run: |
-          npm publish
+        run: npm publish
